# cumt_web_login

./: .gitignore  LICENSE  README.md  cumt_web_login_github.code-workspace  package-lock.json  package.json  tech.md  updater-beta.json  updater.json
beta-assets/: CUMTLogin-beta-1.20.4-beta.1-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.20.4-beta.2-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.20.5-beta.1-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.20.5-beta.2-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.20.5-beta.3-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.20.5-beta.3.1-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.20.5-beta.3.2-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.20.5-beta.3.3-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.20.5-beta.3.4-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.21.1-beta.1-x64-setup.nsis.zip.sig  CUMTLogin-beta-1.21.1-beta.2-x64-setup.nsis.zip.sig
mem/: project_memory.md  quick.md
scripts/: publish-beta.ps1
src/: index.html  renderer.js  styles.css  update-log.css  update-log.html  update-log.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  commands.rs  main.rs  models.rs
src-tauri/src/services/: config.rs  mod.rs  portal.rs  system.rs
~/.tauri/: campus_login.key.pub  ter.md
